@@ -13,8 +13,14 @@ wajig (2.4) unstable; urgency=low
     patch by "Reuben Thomas" <rrt@sc3d.org>
   * Reinstate --simulate option, but this only where it makes sense (i.e. where
     external processes are called).
+  * LOCALUPGRADE:
+    - [ole] wajig LOCALUPGRADE
+    - [new] wajig UPGRADE --local 
+  * LOCALDISTUPGRADE:
+    - [ole] wajig LOCALDISTUPGRADE
+    - [new] wajig DISTUPGRADE --local
 
- -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Mon, 26 Mar 2012 22:09:04 +0200
+ -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Mon, 26 Mar 2012 23:13:58 +0200
 
 wajig (2.3) unstable; urgency=low
 
